Make CMake install header files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.15...4.0)
 
+
+
 project(
 	sup
 	VERSION 0.1
@@ -11,6 +13,24 @@ add_library(
 	src/sup.c
 )
 
-install(TARGETS sup)
+target_sources(
+	sup
+	PUBLIC
+	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+	$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/libsup>
+)
+
+get_target_property(CQP_PUBLIC_HEADERS sup INTERFACE_SOURCES)
+
+set_target_properties(sup PROPERTIES PUBLIC_HEADER "${CQP_PUBLIC_HEADERS}")
+
+target_include_directories(
+	sup
+	INTERFACE include/libsup
+)
+
 include(CPack)
+include(GNUInstallDirs)
+
+install(TARGETS sup)
 
